[project]
name = "flm-tooling-sandbox-api"
version = "0.1.0"
description = "Free Language Model toolsing sandbox's access API, main acess to training suite core and triger of initial processes"
authors = [
    {name = "Andrew Alizaga andrewatld@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
